Bug 387929 - The dates of the equinoxes and solstices given in kstars by the calculator tool are wrong
Summary: The dates of the equinoxes and solstices given in kstars by the calculator to...
Status: RESOLVED FIXED
Alias: None
Product: kstars
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.8.8
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Jasem Mutlaq
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-12-15 11:19 UTC by Eric
Modified: 2020-02-18 09:03 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Results provided by IMCCE (https://promenade.imcce.fr/en/pages4/439.html) vs provided by Kstars (301.18 KB, image/png)
2017-12-15 11:19 UTC, Eric
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Eric 2017-12-15 11:19:02 UTC
Created attachment 109385 [details]
Results provided by IMCCE (https://promenade.imcce.fr/en/pages4/439.html) vs provided by Kstars

The dates of the equinoxes and solstices given in kstars by the calculator tool are wrong.
1- It seems that there is a lag of one year. 2018 in kstars => 2017 for the IMCCE (Institute for Celestial Mechanics and Computation of Ephemerides, official service that "manages" the time in France, see presentation here : https://www.imcce.fr/institut/presentation/)
2 even with the lag of a year, there are differences of several minutes between the different results.
Comment 1 Jasem Mutlaq 2017-12-15 21:28:05 UTC
I was checking against other online sources for 2017 and the results are pretty close with few minutes of difference only.
Comment 2 Eric 2017-12-15 22:41:21 UTC
The winter solstice in 2017 is scheduled for December 21 at 16:29 UTC (or 16:27 according to the IMCCE). What I do not understand is why Kstars tells me that it is scheduled for December 21 at 22:19 UTC? I tested kstars on two different computers.
Comment 3 Karl Ove Hufthammer 2018-07-22 11:59:48 UTC
Confirming. For 2018, they are even more wrong. On my system, it lists:

Vernal equinox: 20 March 2018 22:18:23 UTC
Summer solstice: 21 June 2018 16:41:01 UTC
Autumnal equinox: 23 September 2018 08:12:20 UTC
Winter solstice: 22 December 2018 04:18:47 UTC

While https://www.timeanddate.com/calendar/seasons.html?n=1440
lists 

Vernal equinox: 20 March 2018 16:15 UTC
Summer solstice: 21 June 2018 10:07 UTC
Autumnal equinox: 23 September 01:54 UTC
Winter solstice: 21 December 2018 22:22 UTC

(Note that also the *date* for the winter solstice differ.)

The U.S. Naval Observatory lists similar dates/times at http://aa.usno.navy.mil/seasons?year=2018&tz=0&tz_sign=-1
(For winter solstice, they list the time as 22:23 instead of 22:22. Perhaps different rounding rules?)
Comment 4 Jasem Mutlaq 2020-02-18 09:03:55 UTC
Git commit de594e589673f281357051a59c076c8cbd3cb30a by Jasem Mutlaq.
Committed on 18/02/2020 at 09:03.
Pushed by mutlaqja into branch 'master'.

Fixed Equinox and Solstice dates in Calculator

Summary:
This patch uses a revised version of the algorithm from Astronomical algorithms - Jean Meeus to calculate the correct dates of Equinox and Solstice in Calculator.

Reviewers: mutlaqja

Reviewed By: mutlaqja

Subscribers: mutlaqja, kde-edu

Tags: #kstars, #kde_edu

Differential Revision: https://phabricator.kde.org/D27413

M  +142  -97   kstars/tools/modcalcvizequinox.cpp
M  +2    -2    kstars/tools/modcalcvizequinox.h

https://commits.kde.org/kstars/de594e589673f281357051a59c076c8cbd3cb30a