Fixed Equinox and Solstice dates in Calculator

Summary:
This patch uses a revised version of the algorithm from Astronomical algorithms - Jean Meeus to calculate the correct dates of Equinox and Solstice in Calculator.
BUG: 387929

Reviewers: mutlaqja

Reviewed By: mutlaqja

Subscribers: mutlaqja, kde-edu

Tags: #kstars, #kde_edu

Differential Revision: https://phabricator.kde.org/D27413